giftcard.css
#giftcard {
    display: flex;
    justify-content: center;
    align-items: center;
}

.giftcard-content {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    align-items: center;
    margin: 4rem;
    margin-top: 0;
}

.giftcard-values {
    display: flex;
    flex-wrap: wrap;
}

.giftcard-info{
    display: flex;
    flex-direction: column;
    min-width: 400px;
}

.input-wrapper {
    display: flex;
    flex-direction: column;
    margin-bottom: 1rem;
}

.giftcard-atc-wrapper {
    display: flex;
}

.date-value-wrapper {
    display: flex;
    justify-content: space-between;
}

.giftcard-title {
    text-align: center;
    font-size: 4rem;
    margin-bottom: 0;
}

